# brodie.id.au

./: .build.yml  .gitignore  README.md  brodie.id.au.py  cdk.json  environment.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
brodie.id.au/: blog.md  comments.md  conf.py  convo.html  index.md  index.rst  tools.md
brodie.id.au/_static/: custom.css  fix.css
brodie.id.au/_templates/: layout.html
brodie.id.au/blog/: calculate-the-knee-point-voltage-of-a-current-transformer-algorithmically.ipynb  ct-knees.ipynb  purdue.md  sans-course-contents-and-index-for-giac-exams.md  sans-course-index.md  serverless-investment-management-portfolio.md
nikola-site/: conf.py
nikola-site/posts/: calculate-the-knee-point-voltage-of-a-current-transformer-algorithmically.ipynb
nikola-site/templates/: math_helper.tmpl
site/: conf.py
site/posts/: CT knee point.ipynb  calculate-the-knee-point-voltage-of-a-current-transformer-algorithmically.ipynb  calculate-the-knee-point-voltage-of-a-current-transformer-algorithmically.rst  sans-course-contents-and-index-for-giac-exams.md
