[tool.poetry]
package-mode = false
name = "brodie.id.au"
description = "My website."

[tool.poetry.dependencies]
python = "^3.12"
Sphinx = "^7.3.7"
aws-cdk-lib = "^2.32.1"
ablog = "^0.11.6"
myst-nb = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
